[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

# strip to remove custom debug section
# llvm-strip can be used to control over which custom sections should be kept around
[profile.release]
strip=true
# only cons is longer build time
lto=true